a lot more stuff and move to java 8